# Regex

./: CHANGELOG.md  LICENSE  README.md  Regex.cabal  hie.yaml
hrep/: Main.hs
src/: Atom.hs  DataTypes.hs  Matching.hs  Parser.hs  Regex.hs
test/: AtomTest.hs  DataTypesTest.hs  MatchingTest.hs  ParserTest.hs  RegexTest.hs
