cabal-version:      >=1.10
name:               Regex
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
maintainer:         jawor403@gmail.com
author:             Michał Jaworski
category:           Text
build-type:         Simple
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Regex
    hs-source-dirs:   src
    other-modules:
        Matching
        Parser
        DataTypes
        Atom

    default-language: Haskell2010
    build-depends:
        base >=4.13 && <4.14,
        mtl >=2.2,
        transformers >=0.5.6

executable hrep
    main-is:          Main.hs
    hs-source-dirs:   hrep src
    other-modules:    
        Regex
        Matching
        Parser
        DataTypes
        Atom
    build-depends:
        base >=4.13 && <4.14,
        mtl >=2.2,
        transformers >=0.5.6,
        text >= 1.2.4,
        rainbow >=0.34

test-suite Regex-test
    type:             exitcode-stdio-1.0
    main-is:          RegexTest.hs
    hs-source-dirs:   test src
    other-modules:
        AtomTest
        MatchingTest
        ParserTest
        Atom
        DataTypes
        Matching
        Parser

    default-language: Haskell2010
    build-depends:
        base >=4.13 && <4.14,
        test-framework >=0.8.2,
        test-framework-hunit >=0.3,
        HUnit >=1.6,
        mtl >=2.2,
        transformers >=0.5.6
